// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should even parse examples with custom extensions 1`] = `
[
  {
    "content": "Custom extensions",
    "type": "markdown",
  },
  {
    "content": "<AppButton>Example in vue</AppButton>",
    "settings": {},
    "type": "code",
  },
]
`;

exports[`should parse examples settings correctly 1`] = `
[
  {
    "content": "Pass props to CodeRenderer",
    "type": "markdown",
  },
  {
    "content": "<h1>Hello Markdown!</h1>",
    "settings": {
      "showcode": true,
    },
    "type": "code",
  },
  {
    "content": "<h1>Example in frame and Without editor</h1>",
    "settings": {
      "frame": {
        "width": "400px",
      },
    },
    "type": "code",
  },
  {
    "content": "Pass props to PreviewRenderer",
    "type": "markdown",
  },
  {
    "content": "<h2>Hello Markdown!</h2>",
    "settings": {
      "noeditor": true,
    },
    "type": "code",
  },
  {
    "content": "\`\`\`jsx
<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>h2</span><span class="token punctuation">></span></span><span class="token plain-text">This is Highlighted!</span><span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>h2</span><span class="token punctuation">></span></span>
\`\`\`",
    "type": "markdown",
  },
]
`;

exports[`should parse undefined custom extensions without throwing 1`] = `
[
  {
    "content": "Undefined extensions (default)",
    "type": "markdown",
  },
  {
    "content": "<AppButton>Example in jsx with undefined extensions</AppButton>",
    "settings": {},
    "type": "code",
  },
  {
    "content": "\`\`\`pizza
<AppButton>Example in pizza with undefined extensions (test double)</AppButton>
\`\`\`",
    "type": "markdown",
  },
]
`;

exports[`should separate Markdown and component examples 1`] = `
[
  {
    "content": "# Header

Text with *some* **formatting** and a [link](/foo).

<div>And some HTML.</div>

![Image](/bar.png)

This code example should be rendered as a playground:",
    "type": "markdown",
  },
  {
    "content": "<h1>Hello Markdown!</h1>",
    "settings": {},
    "type": "code",
  },
  {
    "content": "Text with some \`code\` (playground too).",
    "type": "markdown",
  },
  {
    "content": "<h2>Hello Markdown!</h2>",
    "settings": {},
    "type": "code",
  },
  {
    "content": "And some language and modifier (playground again):",
    "type": "markdown",
  },
  {
    "content": "<h3>Hello Markdown!</h3>",
    "settings": {
      "noeditor": true,
    },
    "type": "code",
  },
  {
    "content": "This should be just highlighted:

\`\`\`jsx
<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>h4</span><span class="token punctuation">></span></span><span class="token plain-text">Hello Markdown!</span><span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>h4</span><span class="token punctuation">></span></span>
\`\`\`

This should be highlighted too:

\`\`\`html
<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>h5</span><span class="token punctuation">></span></span>Hello Markdown!<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;/</span>h5</span><span class="token punctuation">></span></span>
\`\`\`",
    "type": "markdown",
  },
]
`;
